# mpc_ctrl_based_opt

./: README.md
mpc_ctrl/: CMakeLists.txt  package.xml
mpc_ctrl/GTSAMIntegration/: JPCM.cpp  factors.cpp
mpc_ctrl/app/: JPCM_node.cpp
mpc_ctrl/bash/: start_px4ctrl.sh  test_fusion.bash
mpc_ctrl/config/: controller_param.yaml  ctrl_param_fpv.yaml
mpc_ctrl/include/: PX4CtrlFSM.h  PX4CtrlParam.h  controller.h  input.h
mpc_ctrl/launch/: pub_cmd.launch  run_ctrl.launch  run_fusion.launch  run_test_jpcm.launch  thrust_calibrate.launch  vicon.launch
mpc_ctrl/msg/: PositionCommand.msg
mpc_ctrl/scripts/: controller_log.txt  (+6 more)
output/: data_vis.py
src/mpc_msgs/: package.xml
src/mpc_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
src/px4_mpc/: package.xml
src/px4_mpc/launch/: config.rviz  mpc_quadrotor_trajectory.launch  multirotor_mpc.launch  sitl_multirotor_mpc.launch  test_multirotor_rate_closedloop.launch  test_multirotor_rate_ocp.launch  test_trajectory_tracking.launch
src/px4_mpc/nodes/: acados_ocp.json  circular_trajectory_generator.py  mpc_quadrotor.py  mpc_quadrotor_trajectory.py  test_multirotor_rate_closedloop.py  test_multirotor_rate_ocp.py  test_trajectory_tracking.py  test_trajectory_tracking_simple.py
src/px4_mpc/nodes/c_generated_code/: Makefile  acados_sim_solver_multirotor_rate_model.c  acados_sim_solver_multirotor_rate_model.h  acados_solver_multirotor_rate_model.c  acados_solver_multirotor_rate_model.h
src/px4_mpc/rviz/: trajectory_tracking.rviz
src/px4_mpc/src/px4_mpc/controllers/: multirotor_rate_mpc.py  multirotor_trajectory_mpc.py
(+6 files in other folders)
