<package>
  <name>px4_mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <maintainer email="padr@kth.se">Pedro Roque</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <!-- <depends>std_msgs</depends> -->
  <!-- <depend>mpc_msgs</depend> -->
  <!-- <exec_depend>ros2launch</exec_depend> -->
  <!-- <test_depend>python3-pytest</test_depend> -->
</package>
